objects/Token_Purchaser__c.object
<CustomObject>
    <description>Token purchaser profile - individuals who purchase crypto tokens on the JIL platform</description>
    <label>Token Purchaser</label>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Token Purchaser ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Token Purchasers</pluralLabel>
    <sharingModel>Private</sharingModel>
    
    <!-- Personal Information Fields -->
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    
    <!-- Portal Access Fields -->
    <fields>
        <fullName>Portal_Username__c</fullName>
        <label>Portal Username</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Portal_Access_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Access Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Portal_Login__c</fullName>
        <label>Last Portal Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Portal_Registration_Date__c</fullName>
        <label>Portal Registration Date</label>
        <type>Date</type>
    </fields>
    
    <!-- KYC/Onfido Verification Fields -->
    <fields>
        <fullName>KYC_Status__c</fullName>
        <label>KYC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onfido_Applicant_ID__c</fullName>
        <label>Onfido Applicant ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onfido_Check_ID__c</fullName>
        <label>Onfido Check ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onfido_Check_Result__c</fullName>
        <label>Onfido Check Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clear</fullName>
                </value>
                <value>
                    <fullName>Consider</fullName>
                </value>
                <value>
                    <fullName>Unidentified</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Suspected</fullName>
                </value>
                <value>
                    <fullName>Caution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onfido_Check_Date__c</fullName>
        <label>Onfido Check Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Onfido_Document_Report_ID__c</fullName>
        <label>Onfido Document Report ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onfido_Facial_Report_ID__c</fullName>
        <label>Onfido Facial Report ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KYC_Expiration_Date__c</fullName>
        <label>KYC Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KYC_Risk_Level__c</fullName>
        <label>KYC Risk Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onfido_Webhook_Response__c</fullName>
        <label>Onfido Webhook Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    
    <!-- Social Handles Fields -->
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <label>Twitter/X Handle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discord_Handle__c</fullName>
        <label>Discord Handle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telegram_Handle__c</fullName>
        <label>Telegram Handle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GitHub_Handle__c</fullName>
        <label>GitHub Handle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instagram_Handle__c</fullName>
        <label>Instagram Handle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    
    <!-- User Grading/Tier Fields -->
    <fields>
        <fullName>User_Tier__c</fullName>
        <label>User Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                    <default>true</default>
                    <label>Bronze</label>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Institutional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Purchase_Volume__c</fullName>
        <label>Total Purchase Volume (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Transactions__c</fullName>
        <label>Total Transactions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Purchase_Date__c</fullName>
        <label>First Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Purchase_Date__c</fullName>
        <label>Last Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>

    <!-- ============================================ -->
    <!-- VALIDATION RULES                             -->
    <!-- ============================================ -->

    <!-- Email format validation (defense-in-depth beyond Salesforce Email type) -->
    <validationRules>
        <fullName>Email_Format_Validation</fullName>
        <active>true</active>
        <description>Validates email format beyond Salesforce's built-in Email field check. Ensures proper structure with no spaces, valid domain with TLD, and no consecutive dots.</description>
        <errorConditionFormula>AND(
    NOT(ISBLANK(Email__c)),
    OR(
        NOT(REGEX(Email__c, "^[a-zA-Z0-9._%+\\-]+@[a-zA-Z0-9.\\-]+\\.[a-zA-Z]{2,}$")),
        CONTAINS(Email__c, ".."),
        CONTAINS(Email__c, " ")
    )
)</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>Please enter a valid email address (e.g., name@example.com). The address cannot contain spaces or consecutive dots.</errorMessage>
    </validationRules>

    <!-- ============================================ -->
    <!-- DUPLICATE RULES                              -->
    <!-- ============================================ -->

    <!-- 
        IMPORTANT: Salesforce Duplicate Rules require THREE metadata components 
        that cannot be defined inside the .object file:
        
        1. Matching Rule  (MatchingRule metadata type)
        2. Duplicate Rule  (DuplicateRule metadata type)
        
        These must be created as separate metadata files or configured via Setup UI.
        Below are the specifications for implementation:
        
        MATCHING RULE: Token_Purchaser_Email_Match
        ============================================
        Object: Token_Purchaser__c
        Match criteria:
          - Email__c: Exact match (case-insensitive)
        
        DUPLICATE RULE: Token_Purchaser_Duplicate_Email
        ============================================
        Object: Token_Purchaser__c
        Action on Create: Alert (allow save with warning)
        Action on Edit: Alert
        Matching Rules: Token_Purchaser_Email_Match
        Alert text: "A Token Purchaser with this email address already exists. 
                     Please verify this is not a duplicate record."
        
        To implement via CLI after org authentication:
        1. Setup > Matching Rules > New > Token_Purchaser__c > Email__c (Exact)
        2. Setup > Duplicate Rules > New > Token_Purchaser__c > attach matching rule
        
        OR create files:
        - matchingRules/Token_Purchaser__c.matchingRule
        - duplicateRules/Token_Purchaser_Duplicate_Email.duplicateRule
    -->

</CustomObject>